src/objects/Investigation_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Activity Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipName>Investigation_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipName>Investigation_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Activity Log</label>
    <nameField>
        <displayFormat>{YY}-{MM}-{DD}-{0000}-NOTE</displayFormat>
        <label>Investigation Notes ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>